l10n Playlist web ui

--- a/components/playlist/browser/resources/playlist.html
+++ b/components/playlist/browser/resources/playlist.html
@@ -6,6 +6,8 @@
 <title>Brave Playlist</title>
 <link rel="stylesheet" href="chrome-untrusted://resources/css/text_defaults.css">
 <link rel="stylesheet" href="chrome-untrusted://resources/brave/fonts/poppins.css">
+<script src="chrome-untrusted://resources/js/load_time_data_deprecated.js"></script>
+<script src="/strings.js"></script>
 <script src="/playlist.bundle.js"></script>
 <style>
   #root { 
