--- a/android/java/res/layout/activity_brave_wallet.xml
+++ b/android/java/res/layout/activity_brave_wallet.xml
@@ -7,17 +7,18 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:ignore="MergeRootFrame"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/wallet_bg"
     tools:context=".BraveWalletActivity">
 
-    <LinearLayout
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/crypto_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
+        <com.google.android.material.appbar.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
@@ -27,20 +28,27 @@
             app:titleTextColor="@color/wallet_text_color"
             app:collapseIcon="@drawable/ic_baseline_arrow_back_24"
             app:layout_scrollFlags="scroll|enterAlways|snap" />
+        </com.google.android.material.appbar.AppBarLayout>
 
-        <include layout="@layout/wallet_backup_banner"/>
-        <FrameLayout
+        <LinearLayout
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <include layout="@layout/wallet_backup_banner"/>
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/navigation_view_pager"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+                android:layout_height="match_parent" />
+        </LinearLayout>
 
+        <LinearLayout
+            app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
+            android:layout_gravity="bottom"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
             <ImageView
-                android:layout_gravity="bottom"
                 android:id="@+id/bottom_container_top_shadow"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/toolbar_shadow_height"
@@ -48,19 +56,52 @@
                 android:scaleType="fitXY"
                 android:scaleY="-1"
                 tools:ignore="ContentDescription" />
+            <org.chromium.chrome.browser.custom_layout.BottomNavigationViewWithIndicator
+                android:id="@+id/wallet_bottom_navigation"
+                android:layout_width="match_parent"
+                android:layout_height="?actionBarSize"
+                android:background="@color/wallet_toolbar_bg_color"
+                app:menu="@menu/wallet_bottom_navigation_items"
+                app:itemIconTint="@color/wallet_bottom_navigation_color"
+                app:itemHorizontalTranslationEnabled="false"
+                app:labelVisibilityMode="labeled" />
+        </LinearLayout>
 
-        </FrameLayout>
+        <LinearLayout
+            android:id="@+id/fab_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_marginBottom="?actionBarSize"
+            android:orientation="vertical">
 
-        <org.chromium.chrome.browser.custom_layout.BottomNavigationViewWithIndicator
-            android:id="@+id/wallet_bottom_navigation"
-            android:layout_width="match_parent"
-            android:layout_height="?actionBarSize"
-            android:background="@color/wallet_toolbar_bg_color"
-            app:menu="@menu/wallet_bottom_navigation_items"
-            app:itemIconTint="@color/wallet_bottom_navigation_color"
-            app:itemHorizontalTranslationEnabled="false"
-            app:labelVisibilityMode="labeled" />
-    </LinearLayout>
+            <ImageView
+                android:id="@+id/pending_tx_notification"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:contentDescription="@null"
+                android:src="@drawable/ic_pending_tx_notification_icon"
+                android:background="@drawable/ic_pending_tx_notification_bg"
+                android:elevation="10dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
+                android:scaleType="fitCenter"
+                android:visibility="visible"/>
+
+            <ImageView
+                android:id="@+id/buy_send_swap_button"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:contentDescription="@null"
+                android:src="@drawable/ic_swap_icon"
+                android:background="@drawable/ic_swap_bg"
+                android:elevation="10dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
+                android:scaleType="center"
+                android:visibility="gone"/>
+        </LinearLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/crypto_onboarding_layout"
@@ -93,39 +134,4 @@
         </FrameLayout>
 
     </androidx.core.widget.NestedScrollView>
-
-    <LinearLayout
-        android:id="@+id/fab_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_marginBottom="?actionBarSize"
-        android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/pending_tx_notification"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:contentDescription="@null"
-            android:src="@drawable/ic_pending_tx_notification_icon"
-            android:background="@drawable/ic_pending_tx_notification_bg"
-            android:elevation="10dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
-            android:scaleType="fitCenter"
-            android:visibility="visible"/>
-
-        <ImageView
-            android:id="@+id/buy_send_swap_button"
-            android:layout_width="56dp"
-            android:layout_height="56dp"
-            android:contentDescription="@null"
-            android:src="@drawable/ic_swap_icon"
-            android:background="@drawable/ic_swap_bg"
-            android:elevation="10dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
-            android:scaleType="center"
-            android:visibility="gone"/>
-    </LinearLayout>
 </FrameLayout>
