Add bottom margin to fragment portfolio to better support FAB

--- a/android/java/res/layout/fragment_portfolio.xml
+++ b/android/java/res/layout/fragment_portfolio.xml
@@ -266,6 +266,7 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="88dp"
             app:cardCornerRadius="6dp"
             app:cardElevation="2dp"
             app:cardUseCompatPadding="true">
