--- a/android/java/res/menu/wallet_bottom_navigation_items.xml
+++ b/android/java/res/menu/wallet_bottom_navigation_items.xml
@@ -7,17 +7,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/action_wallet_portfolio"
         android:title="@string/portfolio"
-        android:icon="@drawable/ic_add" />
+        android:icon="@drawable/ic_portfolio" />
     <item android:id="@+id/action_wallet_nfts"
         android:title="@string/brave_wallet_nfts"
         android:icon="@drawable/ic_add" />
     <item android:id="@+id/action_wallet_activity"
         android:title="@string/brave_wallet_activity"
-        android:icon="@drawable/ic_add" />
+        android:icon="@drawable/ic_activity" />
     <item android:id="@+id/action_wallet_accounts"
         android:title="@string/accounts"
-        android:icon="@drawable/ic_add" />
+        android:icon="@drawable/ic_accounts" />
     <item android:id="@+id/action_wallet_market"
         android:title="@string/market"
-        android:icon="@drawable/ic_add" />
+        android:icon="@drawable/ic_explore" />
 </menu>
