Keep player alive while navigating playlist pages
Previously, we rendered playlist player only when
user is in the playlist folder page.

This PR extract video frame to top-most component,
and keep video player alive, so that users can enjoy
the video and browse playlist at the same time.

--- a/components/playlist/browser/resources/video_frame_contents.html
+++ b/components/playlist/browser/resources/video_frame_contents.html
@@ -8,6 +8,7 @@
 <head>
 <meta charset="utf-8">
 <title>Brave Playlist Player</title>
+<link rel="stylesheet" href="chrome-untrusted://resources/brave/fonts/poppins.css">
 <script src="/videoFrameContents.bundle.js"></script>
 </head>
 <style>
