Add Web Discovery Android pref, add buildflag and feature guards

--- a/android/java/res/xml/brave_privacy_preferences.xml
+++ b/android/java/res/xml/brave_privacy_preferences.xml
@@ -192,6 +192,12 @@
             android:summary="@string/send_p3a_analytics_summary"
             android:defaultValue="false" />
         <org.chromium.components.browser_ui.settings.ChromeSwitchPreference
+            android:key="send_web_discovery"
+            android:order="25"
+            android:title="@string/send_web_discovery_title"
+            android:summary="@string/send_web_discovery_summary"
+            android:defaultValue="false" />
+        <org.chromium.components.browser_ui.settings.ChromeSwitchPreference
           android:key="send_crash_reports"
           android:order="25"
           android:title="@string/send_crash_reports_title"
