--- a/components/ai_chat/resources/page/components/main/style.module.scss
+++ b/components/ai_chat/resources/page/components/main/style.module.scss
@@ -16,7 +16,15 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  max-width: 680px;
+  margin: 0 auto;
   padding: 0 8px 8px 8px;
+}
+
+.conversationContainer {
+  width: 100%;
+  max-width: 680px;
+  margin: 0 auto;
 }
 
 .scroller {
@@ -44,7 +52,6 @@
 .header {
   padding: 8px 16px;
   border-bottom: 1px solid var(--leo-color-divider-subtle);
-  background-color: var(--leo-color-container-background);
   display: flex;
   align-items: center;
   justify-content: space-between;
