--- a/components/ai_chat/resources/page/components/main/style.module.scss
+++ b/components/ai_chat/resources/page/components/main/style.module.scss
@@ -21,7 +21,7 @@
   padding: 0 8px 8px 8px;
 }
 
-.conversationContainer {
+.conversationContent {
   width: 100%;
   max-width: 680px;
   margin: 0 auto;
