--- a/components/parental_control/extension/content/ui/popup.html
+++ b/components/parental_control/extension/content/ui/popup.html
@@ -12,56 +12,75 @@
   <div id="container" style="display: flex; flex-direction: column;">
     <div id="popupContainers">
       <div id="signUpContainer">
-        <div style="display: flex; justify-content: center;">
-          <h1 style="font-size: 18px; margin-bottom: 15px;">Kids mode</h1>
+        <div id="centerContainer">
+          <div id="headingText" style="margin-top: 75px; font-size: 17px; width: 210px;">We keep an eye to provide your kid a safe browsing experience</div>
         </div>
         <form id="registerForm">
-          <input type="password" id="password" placeholder="Password">
-          <input style="margin-top: 10px;" type="password" id="cpassword" placeholder="Confirm password">
-          <button type="submit" id="loginBtn">Set password</button>
+          <div id="centerContainer">
+            <input style="margin-top: 26px;" type="password" id="password" placeholder="Password">
+            <input style="margin-top: 12px; margin-bottom: 21px;" type="password" id="cpassword" placeholder="Confirm password">
+            <div>
+              <button type="submit" id="loginBtn">Set password</button>
+            </div>
+          </div>
         </form>
       </div>
       <div id="signInContainer">
-        <div style="display: flex; justify-content: center;">
-          <h1 style="font-size: 18px; margin-bottom: 15px;">Kids mode</h1>
+        <div id="centerContainer">
+          <div id="headingText" style="font-size: 15px; margin-top: 35px;">We ensure your kid a safe browsing experience</div>
         </div>
-        <form id="loginForm">
-          <input type="password" id="loginPassword" placeholder="Password">
-          <div style="display: flex; justify-content: start;">
-            <span id="resetPasswordLink" style="color: #a35e15; cursor: pointer; margin-left: 3px; margin-top: 2px;">Reset
-              password</span>
+        <form id="loginForm" style="margin-top: 18px;">
+          <div id="centerContainer">
+            <input type="password" id="loginPassword" placeholder="Password">
+          </div>
+          <div style="display: flex; justify-content: start; margin-top: 7px; margin-left: 32px; cursor: pointer;">
+            <span id="resetPasswordLink">Reset password</span>
           </div>
           <div style="display: flex; flex-direction: column; margin-bottom: 10px; margin-top: 15px;">
-            <div class="checkbox-container">
+            <div class="checkbox-container tooltip">
               <input type="checkbox" id="blockGamesCheckbox" style="margin: 5px;">
               <label class="checkbox-label" for="blockGamesCheckbox">Block games</label>
+              <span class="tooltiptext">Foster productivity and creativity by minimizing gaming</span>
             </div>
-            <div class="checkbox-container">
+            <div class="checkbox-container tooltip">
               <input type="checkbox" id="blockSocialMediaCheckbox" style="margin: 5px;">
               <label class="checkbox-label" for="blockSocialMediaCheckbox">Block social media</label>
+              <span class="tooltiptext">Encourage productive screen time by blocking social media sites.</span>
             </div>
             <div class="session-time-container">
-              <label for="sessionTime" class="timerLabel">Set timer</label>
+              <label for="sessionTime" class="timerLabel">Set timer for</label>
               <input id="sessionTime" type="number" value="1" min="1" max="24" name="sessionTime">
-              <span id="sessionTimeSpan"
-                style="display: flex; align-items: center; margin-left: 2px; font-weight: bold;">Hr</span>
+              <span id="sessionTimeSpan" style="display: flex; align-items: center; margin-left: 4px; font-weight: bold; color: #fff;">Hr</span>
             </div>
           </div>
-          <button type="submit" id="loginBtn">Start kids mode</button>
+          <div id="centerContainer">
+            <button type="submit" id="loginBtn">Turn on</button>
+          </div>
         </form>
-
       </div>
       <div id="kidsContent">
-        <div style="display: flex; justify-content: center;">
-          <h1 style="font-size: 18px; margin-bottom: 20px;">Exit kids mode</h1>
+        <div id="centerContainer">
+          <div id="headingText" style="width: 222px;">Make sure you make the most of today</div>
         </div>
         <form id="logoutForm">
-          <input type="password" id="logoutPassword" placeholder="Password">
-          <button type="submit" style="padding: 10px; margin-bottom: 20px;" id="logoutBtn">Logout</button>
+          <div id="centerContainer" style="align-items: self-start; justify-content: center;
+          margin-left: 8px;">
+            <div id="timerDisplay">
+              <div id="timeText">Time left</div>
+              <div style="display: flex; flex-direction: row;">
+                <div id="timeHours" style="margin-right: 3px;"></div>
+                <div id="timeMinutes"></div>
+              </div>
+            </div>
+            <div style="color: #fff; font-size: 14px; margin-bottom: 13px; margin-top: 8px;">
+              Exit kids mode
+            </div>
+          </div>
+          <div id="centerContainer">
+            <input type="password" id="logoutPassword" placeholder="Password" style="margin-bottom: 10px;">
+            <button type="submit" style="padding: 10px; margin-bottom: 10px;" id="logoutBtn">Turn of</button>
+          </div>
         </form>
-        <div style="display: flex; align-items: center; justify-content: center;">
-          <div id="timerDisplay" style="font-size: 16px;"></div>
-        </div>
       </div>
     </div>
     <div id="successStatus" style="display: block;"></div>
