--- a/android/java/res/layout/fragment_recovery_phrase.xml
+++ b/android/java/res/layout/fragment_recovery_phrase.xml
@@ -104,6 +104,7 @@
             android:focusable="true"
             android:padding="16dp"
             android:text="@string/skip"
+            android:textStyle="bold"
             android:textSize="16sp"
             android:textColor="@color/text_secondary" />
 
