--- a/android/java/res/layout/fragment_recovery_phrase.xml
+++ b/android/java/res/layout/fragment_recovery_phrase.xml
@@ -88,7 +88,7 @@
             android:layout_above="@+id/skip"
             android:layout_width="match_parent"
             android:gravity="center"
-            android:text="@string/continue_text"
+            android:text="@string/view_recovery_phrase"
             android:layout_margin="16dp" />
 
         <TextView
