--- a/components/brave_rewards/resources/page/components/ping-sign-pdf.module.css
+++ b/components/brave_rewards/resources/page/components/ping-sign-pdf.module.css
@@ -2,7 +2,7 @@
   padding-bottom: 20px;
   font-family: Arial, sans-serif;
   background-color: #525659;
-  min-height: 100vh;
+  max-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -13,6 +13,18 @@
   display: flex;
   justify-content: center;
   margin-bottom: 20px;
+}
+
+.pdfLogo {
+  width: 50px; 
+  height: 50px; 
+  cursor: pointer;
+}
+
+.logo {
+  width: 30px; 
+  height: 30px; 
+  cursor: pointer;
 }
 
 .pdfInput {
@@ -52,19 +64,31 @@
 }
 
 .pdfContainer {
-  width: 80%;
+  width: 70%;
+  max-width: 70vw;
+  flex-shrink: 0;
+  height: 90vh;
+  background-color: transparent;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.dropZoneContainer {
+  width: 70%;
   max-width: 1020px;
   flex-shrink: 0;
   height: 70vh;
   background-color: transparent;
   border: 3px dashed #888787;
-  margin-top: 100px;
+  margin-top: 80px;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 20px;
+  padding: 30px 20px 20px 20px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -91,37 +115,15 @@
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
-.toast {
-  position: fixed;
-  top: 20px;
-  right: 20px;
-  padding: 10px 20px;
-  border-radius: 4px;
-  color: white;
-  opacity: 0.9;
-  transition: opacity 0.3s ease;
-  z-index: 1002;
-}
-
-.toastSuccess {
-  background-color: #4caf50;
-}
-
-.toastError {
-  background-color: #f44336;
-}
-
-.toastInfo {
-  background-color: #2196f3;
-}
-
-.toastFadeOut {
-  opacity: 0;
-}
 
 .confirmationDialog {
   position: fixed;
@@ -167,12 +169,20 @@
   color: #FFF;
   text-align: center;
   font-family: Poppins;
-  font-size: 32px;
+  font-size: 30px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
   margin-bottom: 20px;
 }
+
+.legalText {
+  font-size: 12px;
+  color: #999;
+  margin-top: 20px;
+  text-align: center;
+}
+
 
 .addFileButton {
   display: flex;
@@ -221,7 +231,7 @@
   gap: 30px;
 }
 
-.navBar{
+.navBar {
   position: relative;
   display: flex;
   flex-direction: row;
@@ -266,7 +276,7 @@
   line-height: normal;
 }
 
-.headerControlsBar::after{
+.headerControlsBar::after {
   content: '';
   display: block;
   width: 4px;
@@ -276,7 +286,11 @@
   right: 2px;
 }
 
-.pageChangingControls{
+.navBarOnVerificationSuccess{
+  background: linear-gradient(to top, #2BB563, #323639, #D9D9D9 1%);
+}
+
+.pageChangingControls {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -284,17 +298,21 @@
   gap: 20px;
 }
 
-.previousPage,.nextPage,.separator,.totalPages{
+.previousPage,
+.nextPage,
+.separator,
+.totalPages {
   font-size: 13px;
   color: white;
   font-weight: bold;
 }
 
-.previousPage,.nextPage{
+.previousPage,
+.nextPage {
   cursor: poPoppins;
 }
 
-.pageNumber{
+.pageNumber {
   display: flex;
   flex-direction: row;
   gap: 20px;
@@ -303,7 +321,8 @@
   padding: 0 5px;
 }
 
-.currentPage,.pageNumberInput{
+.currentPage,
+.pageNumberInput {
   width: 29px;
   height: 28px;
   flex-shrink: 0;
@@ -383,7 +402,7 @@
 
 .pdfFileName {
   position: absolute;
-  left: 40px; 
+  left: 40px;
   width: 273px;
   white-space: nowrap;
   overflow: hidden;
@@ -409,19 +428,44 @@
 }
 
 .popupContent {
-  background-color: #323639;
-  border-radius: 8px;
-  padding: 20px;
-  width: 400px;
-  max-width: 90%;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 24px;
+  padding: 20px 25px;
+  width: 595px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  /* max-width: 90%; */
+  height: 390px;
+  border: 1px solid #CACACA;
+  background: #323639;
   position: relative;
+  transition: height 0.3s ease;
+  overflow: hidden;
 }
 
-.popupContent h2 {
-  font-size: 18px;
-  margin-bottom: 20px;
-  color: #fff;
+.popupContent.selected {
+  height: 656px;
+}
+
+.popupContent .h2 {
+  color: #E6E9EB;
+  font-family: Poppins;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  padding: 0 10px;
+}
+
+.h2::after{
+  content: "";
+  display: block;
+  position: relative;
+  width: 566px;
+  height: 2px;
+  background: #9E9999;
+  right: 20px;
+  bottom: -12px;
 }
 
 .closeButton {
@@ -439,81 +483,97 @@
   background-color: white;
   border: 1px solid #e0e0e0;
   border-radius: 4px;
-  padding: 15px;
+  padding: 42px;
   margin-bottom: 20px;
 }
 
 .selectedSignature h3 {
-  font-size: 18px;
+  font-size: 40px;
   margin: 0 0 5px 0;
 }
 
 .selectedSignature p {
-  font-size: 14px;
+  font-size: 16px;
   color: #313030b0;
   margin: 0;
 }
 
 .encKey {
-  font-size: 12px;
+  font-size: 14px;
   color: #fff;
   margin-top: 5px;
 }
 
 .browseImage {
   color: #007aff;
-  font-size: 12px;
+  font-size: 14px;
   text-align: right;
   cursor: pointer;
-  margin-top: 5px;
+  margin-top: 10px;
 }
 
 .signatureList {
   max-height: 200px;
   overflow-y: auto;
   margin-bottom: 20px;
+  padding: 0 15px;
 }
 
 .signatureOption {
   display: flex;
   align-items: center;
+  gap: 11px;
   padding: 10px 0;
   cursor: pointer;
 }
 
 .signatureOption input[type="radio"] {
-  margin-right: 10px;
+  margin-right: 5px;
+  width: 17px;
+  height: 17px;
 }
 
-.signatureOption span {
-  font-size: 14px;
-  color: white;
+.signatureName{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.issueName {
+  color: #E6E9EB;
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 
 .issueDate {
+  color: #E6E9EB;
+  font-family: Poppins;
   font-size: 12px;
-  color: #fff;
-  margin-left: auto;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 
-.buttons{
+.buttons {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  padding: 0 20px 12px 20px;
   align-items: center;
 }
 
 .addButton {
   display: flex;
-  padding: 10px;
   background: none;
   align-items: baseline;
   border: 2px solid white;
-  color: black;
+  color: #fff;
   font-size: 14px;
   cursor: pointer;
-  padding: 5px 0;
-  margin-bottom: 20px;
+  padding: 15px 35px;
   border-radius: 50px;
 }
 
@@ -523,7 +583,7 @@
   align-items: baseline;
   gap: 10px;
   background-color: white;
-  color: white;
+  color: black;
   border: none;
   border-radius: 40px;
   font-size: 16px;
@@ -533,4 +593,156 @@
 .confirmButton:disabled {
   background-color: #ccc;
   cursor: not-allowed;
+}
+
+.documentContainer {
+  overflow-y: auto;
+  overflow-x: hidden;
+  height: calc(100vh - 60px);
+  direction: ltr;
+}
+
+.documentContainer > * {
+  direction: rtl; 
+}
+
+.pdfContainer {
+  display: flex;
+  overflow-x: hidden;
+}
+
+/*success popup*/
+
+.successPopup {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #2c2c2c;
+  border-radius: 24px;
+  padding: 20px 45px;
+  width: 595px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  /* max-width: 90%; */
+  height: 390px;
+  border: 1px solid #CACACA;
+  background: #323639;
+  transition: height 0.3s ease;
+  overflow: hidden;
+  z-index: 1000;
+}
+
+.successTitle {
+  color: #2BB563;
+  font-family: Poppins;
+  font-size: 45px;
+  margin: 0px;
+  padding: 0px;
+  font-style: normal;
+  margin-top: 12px;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.successVerificationTitle{
+  font-size: 40px;
+}
+
+.successMessage {
+  color: #FFF;
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-top: -5px;
+}
+
+.successName{
+  color: #FFF;
+  font-family: Poppins;
+  font-size: 25px;
+  font-style: normal;
+  margin: 0px;
+  margin-bottom: 10px;
+  font-weight: 700;
+  margin-top: -10px;
+  line-height: normal;
+}
+
+.successButtons {
+  display: flex;
+  margin-top: 90px;
+  justify-content: center;
+  gap: 35px;
+  margin-left: 135px;
+}
+
+.methodOptions {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: 18px;
+}
+
+.methodOptions .button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  padding: 19px 63px;
+  background-color: #464A4C;
+  border: none;
+  border-radius: 97px;
+  /* gap: 20px; */
+  height: 98px;
+  align-items: flex-start;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.buttonTitle{
+  font-size: 20px;
+  color: #fff;
+}
+
+.buttonDesc{
+  font-size: 12px;
+  color: #fff; 
+  opacity: 0.5;
+}
+
+.methodOptions .button:hover {
+  background-color: #141414e1;
+}
+
+/* Image Upload Styles */
+.imageUploadContainer {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.imageUploadButton {
+  padding: 10px 20px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.imageUploadButton:hover {
+  background-color: #45a049;
+}
+
+.uploadedImage {
+  max-width: 100%;
+  max-height: 200px;
+  margin-top: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
 }
