--- a/android/java/res/layout/fragment_verify_recovery_phrase.xml
+++ b/android/java/res/layout/fragment_verify_recovery_phrase.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:scrollbars="vertical"
     android:fadeScrollbars="false"
     android:fillViewport="true">
@@ -42,7 +43,9 @@
             app:endIconMode="clear_text"
             android:id="@+id/text_input_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginBottom="16dp">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/text_input_edit_text"
@@ -53,41 +56,48 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <LinearLayout
-            android:orientation="vertical"
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1" >
-            <androidx.appcompat.widget.AppCompatButton
-                android:layout_gravity="bottom"
-                android:id="@+id/button_verify_word"
+            android:layout_weight="1"
+            tools:ignore="UselessParent">
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:gravity="center"
-                android:text="@string/continue_text"
-                android:enabled="false"
-                android:alpha="0.5"
-                android:layout_marginTop="24dp"
-                android:layout_marginBottom="40dp"
-                android:layout_marginHorizontal="16dp"
-                style="@style/BraveWalletOnboardingButton"/>
-
-            <TextView
-                android:id="@+id/skip"
-                style="@style/DefaultRegular"
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:layout_marginHorizontal="16dp"
-                android:layout_marginBottom="40dp"
-                android:background="?android:attr/selectableItemBackground"
-                android:clickable="true"
-                android:focusable="true"
-                android:padding="16dp"
-                android:text="@string/skip"
-                android:textStyle="bold"
-                android:textSize="16sp"
-                android:textColor="@color/text_secondary" />
-        </LinearLayout>
+                android:orientation="vertical"
+                android:layout_gravity="bottom">
+                <androidx.appcompat.widget.AppCompatButton
+                    android:layout_gravity="bottom"
+                    android:id="@+id/button_verify_word"
+                    android:layout_width="match_parent"
+                    android:gravity="center"
+                    android:text="@string/continue_text"
+                    android:enabled="false"
+                    android:alpha="0.5"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginHorizontal="16dp"
+                    style="@style/BraveWalletOnboardingButton"/>
+
+                <TextView
+                    android:id="@+id/skip"
+                    style="@style/DefaultRegular"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_marginBottom="40dp"
+                    android:background="?android:attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:padding="16dp"
+                    android:text="@string/skip"
+                    android:textStyle="bold"
+                    android:textSize="16sp"
+                    android:textColor="@color/text_secondary" />
+            </LinearLayout>
+        </FrameLayout>
     </LinearLayout>
 
 </androidx.core.widget.NestedScrollView>
