--- a/android/java/res/layout/fragment_verify_recovery_phrase.xml
+++ b/android/java/res/layout/fragment_verify_recovery_phrase.xml
@@ -56,48 +56,40 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <FrameLayout
+        <Space
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
-            tools:ignore="UselessParent">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_gravity="bottom">
-                <androidx.appcompat.widget.AppCompatButton
-                    android:layout_gravity="bottom"
-                    android:id="@+id/button_verify_word"
-                    android:layout_width="match_parent"
-                    android:gravity="center"
-                    android:text="@string/continue_text"
-                    android:enabled="false"
-                    android:alpha="0.5"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginBottom="16dp"
-                    android:layout_marginHorizontal="16dp"
-                    style="@style/BraveWalletOnboardingButton"/>
+            android:layout_weight="1" />
 
-                <TextView
-                    android:id="@+id/skip"
-                    style="@style/DefaultRegular"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:layout_marginHorizontal="16dp"
-                    android:layout_marginBottom="40dp"
-                    android:background="?android:attr/selectableItemBackground"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:padding="16dp"
-                    android:text="@string/skip"
-                    android:textStyle="bold"
-                    android:textSize="16sp"
-                    android:textColor="@color/text_secondary" />
-            </LinearLayout>
-        </FrameLayout>
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/button_verify_word"
+            android:layout_width="match_parent"
+            android:gravity="center"
+            android:text="@string/continue_text"
+            android:enabled="false"
+            android:alpha="0.5"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            android:layout_marginHorizontal="16dp"
+            style="@style/BraveWalletOnboardingButton"/>
+
+        <TextView
+            android:id="@+id/skip"
+            style="@style/DefaultRegular"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginBottom="40dp"
+            android:background="?android:attr/selectableItemBackground"
+            android:clickable="true"
+            android:focusable="true"
+            android:padding="16dp"
+            android:text="@string/skip"
+            android:textStyle="bold"
+            android:textSize="16sp"
+            android:textColor="@color/text_secondary" />
     </LinearLayout>
 
 </androidx.core.widget.NestedScrollView>
